--- a/website/assets/styles/pages/entrance/login.less
+++ b/website/assets/styles/pages/entrance/login.less
@@ -6,8 +6,23 @@
     color: @core-vibrant-blue;
   }
   p {
-    font-size: 14px;
+    font-size: 16px;
   }
+  label {
+    font-weight: 700;
+    margin-bottom: 4px;
+  }
+  input {
+    height: 40px;
+    border-radius: 6px;
+  }
+  .card {
+    border-radius: 6px;
+  }
+  .card-body {
+    padding: 2em;
+  }
+
   [purpose="submit-button"] {
     border-radius: 4px;
     padding-top: 10px;
@@ -23,28 +38,21 @@
       font-weight: 400;
     }
   }
+
   [purpose="features-list"] {
    ul {
      list-style-type: none;
      padding-inline-start: 0px;
    }
    li {
-    padding-bottom: 8px;
+    padding-bottom: 12px;
+    color: @core-fleet-black-75;
    }
    img {
     display: inline;
     height: 16px;
     margin-right: 8px;
    }
-
-  }
-
-  input {
-    height: 40px;
-    border-radius: 4px;
-    &:focus {
-      // border-color:
-    }
   }
 
 }
