--- a/website/assets/styles/components/modal.component.less
+++ b/website/assets/styles/components/modal.component.less
@@ -9,9 +9,10 @@
   [purpose='modal-dialog'] {
     z-index: 100;
     position: relative;
-    max-width: 700px;
+    // max-width: 800px;
     [purpose='modal-content'] {
-      max-width: 700px;
+      margin-top: 100px;
+      max-width: 480px;
       [purpose='modal-close-button'] {
         .btn-reset();
         opacity: 0.6;
