--- a/website/assets/styles/pages/customers/dashboard.less
+++ b/website/assets/styles/pages/customers/dashboard.less
@@ -1,24 +1,45 @@
 #dashboard {
 
-  p {
-    font-size: 14px;
+  h3 {
+    padding-bottom: 16px;
+    font-size: 24px;
   }
+
+  p {
+    font-size: 16px;
+  }
+  .card {
+    border-radius: 6px;
+  }
+  .card-body {
+    // padding: 2em;
+  }
+  label {
+    font-weight: 700;
+    margin-bottom: 4px;
+  }
+  input {
+    height: 40px;
+    border-radius: 6px;
+  }
+
   a {
     color:@core-vibrant-blue;
     text-decoration: underline;
   }
-
   .edit-button {
     display: inline-block;
     margin-bottom: 3px;
-    margin-left: 5px;
+    margin-left: 8px;
     width: 12px;
     height: 12px;
+    cursor: pointer;
   }
 
   [purpose="slack-button"] {
     font-size: 14px;
     color: @core-fleet-black;
+    background-color: #fff;
     border: 1px solid #C5C7D1;
     border-radius: 4px;
     &:hover {
@@ -64,20 +85,27 @@
     border-radius: 4px;
     padding: 16px;
     font-size: 13px;
+    a {
+      text-underline-offset: 5px;
+    }
+    p {
+
+
+    }
   }
 
   [purpose="billing-card"] {
     padding: 40px;
-    min-height: 292px;
+    min-height: 312px;
     p {
-      margin-block-end: 0px;
+      margin-block-end: 4px;
     }
 
   }
 
   [purpose="details-card"] {
     padding: 40px;
-    min-height: 292px;
+    min-height: 312px;
     hr {
       color: #E2E4EA;
     }
@@ -88,6 +116,11 @@
     p {
       margin-block-end: 0px;
     }
+
+    strong {
+      padding-bottom: 8px;
+    }
+
     [purpose="license-key"] {
       display: block;
       text-overflow: ellipsis;
