--- a/website/assets/styles/pages/entrance/signup.less
+++ b/website/assets/styles/pages/entrance/signup.less
@@ -6,8 +6,21 @@
     color: @core-vibrant-blue;
   }
   p {
-    font-size: 14px;
-    margin-block-end: 0px;
+    font-size: 16px;
+  }
+  label {
+    font-weight: 700;
+    margin-bottom: 4px;
+  }
+  input {
+    height: 40px;
+    border-radius: 4px;
+  }
+  .card {
+    border-radius: 6px;
+  }
+  .card-body {
+    padding: 2em;
   }
   [purpose="submit-button"] {
     border-radius: 4px;
@@ -31,7 +44,8 @@
      padding-inline-start: 0px;
    }
    li {
-    padding-bottom: 8px;
+    padding-bottom: 12px;
+    color: @core-fleet-black-75;
    }
    img {
     display: inline;
@@ -41,12 +55,5 @@
 
   }
 
-  input {
-    height: 40px;
-    border-radius: 4px;
-    &:focus {
-      // border-color:
-    }
-  }
 
 }
