--- a/website/views/emails/email-order-confirmation.ejs
+++ b/website/views/emails/email-order-confirmation.ejs
@@ -7,7 +7,7 @@
 
 <div style="margin-bottom: 32px; text-align: left;">
   <div style="background: #6A67FE; display: inline-block; color: white; text-decoration: none; border-radius: 4px; text-align: center; padding: 8px 16px 8px 16px" >
-    <a style="color: #EEE;" href="<%= url.resolve(sails.config.custom.baseUrl,'/customers/dashboard') %>">Go to your customer dashboard</a>
+    <a style="color: #EEE;  text-decoration: none;" href="<%= url.resolve(sails.config.custom.baseUrl,'/customers/dashboard') %>">Go to your customer dashboard</a>
   </div>
 </div>
 <p style="margin-bottom: 32px;">As part of your subscription to Fleet Premium you are entitled to unlimited email support. To contact support, please email <a style="color: #6A67FE;" href="mailto:support@fleetdm.com">support@fleetdm.com</a>.</p>
