use correct font

--- a/website/assets/styles/mixins-and-variables/typography.less
+++ b/website/assets/styles/mixins-and-variables/typography.less
@@ -1,5 +1,5 @@
 // Font families:
-@main-font: 'Nunito', sans-serif;
+@main-font: 'Nunito Sans', sans-serif;
 @header-font: 'Nunito Sans', sans-serif;
 @navigation-font: 'Nunito Sans', sans-serif;
 
