handbook-normalize-heading
Normalized the headings through out the handbook and updated associated css styling.

--- a/website/assets/styles/pages/handbook/basic-handbook.less
+++ b/website/assets/styles/pages/handbook/basic-handbook.less
@@ -142,6 +142,7 @@
 
     h1 {
       padding-bottom: 16px;
+      margin-top: 24px;
       margin-bottom: 0px;
       font-size: 36px;
       line-height: 48px;
@@ -169,10 +170,11 @@
       font-weight: 700;
     }
     h4 {
-      font-size: 18px;
+      font-size: 16px;
       padding-top: 24px;
       padding-bottom: 16px;
       margin-bottom: 0px;
+      font-weight: 700;
     }
     h5 {
       font-weight: 700;
