Add mdm, munki and device-user mapping to UI

--- a/frontend/pages/hosts/HostDetailsPage/_styles.scss
+++ b/frontend/pages/hosts/HostDetailsPage/_styles.scss
@@ -386,6 +386,14 @@
     text-align: center;
   }
 
+  &__device-mapping {
+    .device-user-tooltip {
+      flex-direction: column;
+      justify-content: start;
+      text-align: left;
+    }
+  }
+
   &__wrapper {
     border: solid 1px $ui-fleet-blue-15;
     border-radius: 6px;
