--- a/frontend/components/side_panels/SiteTopNav/_styles.scss
+++ b/frontend/components/side_panels/SiteTopNav/_styles.scss
@@ -2,7 +2,6 @@
   position: relative;
   transition: color 200ms ease-in-out;
   cursor: pointer;
-  border-bottom: 3px solid transparent;
   max-height: 50px;
 
   &:hover {
@@ -20,6 +19,7 @@
     .site-nav-item__link {
       border-right: 3px solid $core-vibrant-blue;
       background-color: $core-fleet-black;
+      height: 50px;
     }
   }
 
@@ -66,12 +66,13 @@
     text-align: center;
     display: flex;
     align-items: center;
-    padding: 14px 20px;
+    padding: 14px 20px 17px;
   }
 
   &--active {
     border-bottom: 3px solid $core-vibrant-blue;
     background-color: $core-fleet-black;
+    height: 47px;
 
     &:hover {
       background-color: $core-fleet-black;
