--- a/website/assets/styles/pages/entrance/login.less
+++ b/website/assets/styles/pages/entrance/login.less
@@ -8,22 +8,29 @@
   p {
     font-size: 16px;
   }
-  label {
-    font-weight: 700;
-    margin-bottom: 4px;
-  }
-  input {
-    height: 40px;
-    border-radius: 6px;
-  }
-  .card {
-    border-radius: 6px;
-  }
-  .card-body {
-    padding: 2em;
+
+  [purpose="customer-portal-form"] {
+    label {
+      font-weight: 700;
+      margin-bottom: 4px;
+    }
+    .form-control {
+      height: 40px;
+      border-radius: 6px;
+    }
+    .form-group {
+      margin-bottom: 16px;
+    }
+    .card {
+      border-radius: 6px;
+    }
+    .card-body {
+      padding: 30px;
+    }
   }
 
   [purpose="submit-button"] {
+
     border-radius: 4px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -34,12 +41,15 @@
       margin-right: auto;
       font-size: 14px;
       line-height: 20px;
-      align: center;
+      text-align: center;
       font-weight: 400;
     }
+
   }
 
   [purpose="features-list"] {
+    // min-width: 254px;
+    word-wrap: overflow;
    ul {
      list-style-type: none;
      padding-inline-start: 0px;
@@ -53,6 +63,7 @@
     height: 16px;
     margin-right: 8px;
    }
+
   }
 
 }
