--- a/website/assets/styles/pages/entrance/new-password.less
+++ b/website/assets/styles/pages/entrance/new-password.less
@@ -2,10 +2,39 @@
   h1 {
     font-size: 28px;
   }
-  .form-control {
-    height: 40px;
+  a {
+    color: @core-vibrant-blue;
   }
+  a:hover {
+    text-decoration: none;
+    color: darken(@core-vibrant-blue, 20%);
+  }
+  p {
+    font-size: 16px;
+  }
+
+  [purpose="customer-portal-form"] {
+    label {
+      font-weight: 700;
+      margin-bottom: 4px;
+    }
+    .form-control {
+      height: 40px;
+      border-radius: 6px;
+    }
+    .form-group {
+      margin-bottom: 16px;
+    }
+    .card {
+      border-radius: 6px;
+    }
+    .card-body {
+      padding: 30px;
+    }
+  }
+
   [purpose="submit-button"] {
+
     border-radius: 4px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -16,9 +45,29 @@
       margin-right: auto;
       font-size: 14px;
       line-height: 20px;
-      align: center;
+      text-align: center;
       font-weight: 400;
     }
+
+  }
+
+  [purpose="features-list"] {
+    // min-width: 254px;
+    word-wrap: overflow;
+   ul {
+     list-style-type: none;
+     padding-inline-start: 0px;
+   }
+   li {
+    padding-bottom: 12px;
+    color: @core-fleet-black-75;
+   }
+   img {
+    display: inline;
+    height: 16px;
+    margin-right: 8px;
+   }
+
   }
 
 }
