--- a/website/assets/styles/pages/entrance/forgot-password.less
+++ b/website/assets/styles/pages/entrance/forgot-password.less
@@ -7,9 +7,29 @@
     color: @core-vibrant-blue;
   }
   p {
-    font-size: 14px;
+    font-size: 16px;
+  }
+  label {
+    font-weight: 700;
+    margin-bottom: 4px;
+  }
+  input {
+    height: 40px;
+    border-radius: 4px;
+  }
+  [purpose="customer-portal-form"] {
+    .form-group {
+      margin-bottom: 16px;
+    }
+    .card {
+      border-radius: 6px;
+    }
+    .card-body {
+      padding: 2em;
+    }
   }
   [purpose="submit-button"] {
+
     border-radius: 4px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -20,10 +40,12 @@
       margin-right: auto;
       font-size: 14px;
       line-height: 20px;
-      align: center;
-      font-weight: 700;
+      text-align: center;
+      font-weight: 400;
     }
+
   }
+
   [purpose="back-button"] {
     border-radius: 4px;
     padding-top: 10px;
@@ -38,15 +60,9 @@
       margin-right: auto;
       font-size: 14px;
       line-height: 20px;
-      align: center;
-      font-weight: 700;
+      vertical-align: center;
+      font-weight: 400;
     }
-  }
-
-
-  input {
-    height: 40px;
-    border-radius: 4px;
   }
 
 }
